--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/nkjaiswal/reusable-lib#readme",
   "dependencies": {
+    "log4js": "^6.1.2",
     "mysql": "^2.18.1",
+    "node-rest-client": "^3.1.0",
     "pg": "^7.18.2"
   }
 }
