Adding Domain Name Owner Verification Module

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "log4js": "^6.1.2",
     "mysql": "^2.18.1",
     "node-rest-client": "^3.1.0",
-    "pg": "^7.18.2"
+    "pg": "^7.18.2",
+    "sha1": "^1.1.1"
   }
 }
